--- a/E/Epic/Vail_Resort_Template(T13)_Dynamic FooterLogo/ads/300x250/WhistlerBlackcomb/300x250_WhistlerBlackcomb.htm
+++ b/E/Epic/Vail_Resort_Template(T13)_Dynamic FooterLogo/ads/300x250/WhistlerBlackcomb/300x250_WhistlerBlackcomb.htm
@@ -14,6 +14,11 @@
         font-weight: 900;
         font-style: normal;
       }
+      .MontserratBold {
+        font-family: "montserrat", sans-serif;
+        font-weight: 700;
+        font-style: normal;
+      }
     </style>
     <style media="screen" data-dynamic="style">
       #ad {
@@ -41,13 +46,13 @@
       <div id="backgroundImage1" style="top: 37px;width: 300px; height: auto;" class="asset-top frame" data-image="backgroundImage1"></div>
       <div id="backgroundImage2" style="top: 37px;width: 300px; height: auto;" class="asset-top frame multiframe" data-image="backgroundImage2"></div>
       <div id="backgroundImage3" style="top: 37px;width: 300px; height: auto;" class="asset-top frame multiframe" data-image="backgroundImage3"></div>
-      <div id="topWhitePatch" class="frame" style="top:-213px;background-color:rgba(204, 0, 0, 1.0);"></div>
-      <div id="bottomWhitePatch" class="frame" style="top:165px;background-color:rgba(204, 0, 0, 1.0);"></div>
+      <div id="topWhitePatch" class="frame" style="top:-213px;background-color:rgba(0, 0, 0, 1.0);"></div>
+      <div id="bottomWhitePatch" class="frame" style="top:165px;background-color:rgba(0, 0, 0, 1.0);"></div>
       <div id="productLableLogoBg" class="asset frame" data-image="productLableLogoBg"></div>
       <div id="logoImage" class="asset frame" data-image="logoImage"></div>
       <div id="productLableLogo" class="asset frame" data-image="productLableLogo" style="display:none;"></div>
       <!-- <div id="ref" class="asset frame" data-image="ref"></div> -->
-      <div id="frameText1" class="text-left MontserratBlack"
+      <div id="frameText1" class="text-left MontserratBold"
         data-text="frameText1"
         style="top: 171px;
           left: 11px;
@@ -57,7 +62,7 @@
           /* letter-spacing: 0.1em; */
           line-height: 1.15;">
       </div>
-      <div id="frameText2" class="text-left MontserratBlack"
+      <div id="frameText2" class="text-left MontserratBold"
         data-text="frameText2"
         style="top: 171px;
           left: 11px;
@@ -67,7 +72,7 @@
           /* letter-spacing: 0.1em; */
           line-height: 1.15;">
       </div>
-      <div id="frameText3" class="text-left MontserratBlack"
+      <div id="frameText3" class="text-left MontserratBold"
         data-text="frameText3"
         style="top: 171px;
           left: 11px;
@@ -77,7 +82,7 @@
           /* letter-spacing: 0.1em; */
           line-height: 1.15;">
       </div>
-      <div id="cta" class="text MontserratBlack"
+      <div id="cta" class="text MontserratBold"
         data-text="ctaText"
         data-style="padding:1px 10px 0px;"
         style="top: 194px;
@@ -93,7 +98,7 @@
       <div id="overlay" style="top:0px;left:0px;width:inherit;height:inherit;background-color:#fff;opacity:1;-webkit-transition:all ease .5s;transition:all ease .5s;"></div>
     </div>
     <div id="loadFont" style="width:0;height:0;overflow:hidden;">
-      <div class="MontserratBlack">MontserratBlack</div>
+      <div class="MontserratBold">MontserratBold</div>
     </div>
     <script type="text/javascript">
       var layout = 'standard';
@@ -131,7 +136,7 @@
             // ref: 'ref.png'
             logoImage: './../images/300x250_WhistlerBlackcomb_LogoImage.png',
             styleProperties: "na", //{'#cta': {y:10},'#logoImage': {y:10}}
-            ctaBtnColor: '#4d4d4d^#000000',
+            ctaBtnColor: '#CC0000^#db1f1f',
           },
           beforeLoad: function(data){
             data.map(function(content){
@@ -207,7 +212,7 @@
             canvas.width = this.width;
             canvas.height = this.height;
             document.body.appendChild(canvas);
-            ctx.fillStyle = "#cc0000";
+            ctx.fillStyle = "#FFFFFF";
             ctx.fillRect(0, 0, canvas.width, canvas.height);
             ctx.globalCompositeOperation = 'destination-in';
             ctx.drawImage(this, 0, 0);
