--- a/E/Epic/Vail_Resort_Template(T13)_Dynamic FooterLogo/ads/300x600/Vail/300x600_Vail.htm
+++ b/E/Epic/Vail_Resort_Template(T13)_Dynamic FooterLogo/ads/300x600/Vail/300x600_Vail.htm
@@ -14,7 +14,7 @@
         font-weight: 700;
         font-style: normal;
       } */
-      .TradeGothicNextLTProCondensed {
+      /* .TradeGothicNextLTProCondensed {
         font-family: trade-gothic-next-condensed,sans-serif;
         font-weight: 400;
         font-style: normal;
@@ -28,7 +28,17 @@
         font-family: gill-sans-nova,sans-serif;
         font-weight: 400;
         font-style: normal;
+      } */
+      .TerminaBlack {
+        font-family: "termina", sans-serif;
+        font-weight: 900;
+        font-style: normal;
       }
+      @font-face {
+          font-family: AvenirBlack;
+          src: url('fonts/Avenir-Black.woff') format("woff");
+      }
+      .AvenirBlack { font-family: AvenirBlack; }
     </style>
     <style media="screen" data-dynamic="style">
       #ad {
@@ -37,7 +47,7 @@
         font-family: arial,sans-serif;
         font-weight: 900;
         font-style: normal;
-        color: #000000;
+        color: #3968B1;
         background-color: #fff;
       }
       .frame {
@@ -62,7 +72,7 @@
       <div id="logoImage" class="asset frame" data-image="logoImage"></div>
       <div id="productLableLogo" class="asset frame" data-image="productLableLogo" style="display:none;"></div>
       <!-- <div id="ref" class="asset frame" data-image="ref"></div> -->
-      <div id="frameText1" class="text OpenSansCondensedBold"
+      <div id="frameText1" class="text TerminaBlack"
         data-text="frameText1"
         data-style="text-align:center;"
         style="top: 460px;
@@ -73,7 +83,7 @@
           letter-spacing: 0.02em;
           line-height: 1.15;">
       </div>
-      <div id="frameText2" class="text OpenSansCondensedBold"
+      <div id="frameText2" class="text TerminaBlack"
         data-text="frameText2"
         data-style="text-align:center;"
         style="top: 460px;
@@ -84,7 +94,7 @@
           letter-spacing: 0.02em;
           line-height: 1.15;">
       </div>
-      <div id="frameText3" class="text OpenSansCondensedBold"
+      <div id="frameText3" class="text TerminaBlack"
         data-text="frameText3"
         data-style="text-align:center;"
         style="top: 460px;
@@ -95,24 +105,24 @@
           letter-spacing: 0.02em;
           line-height: 1.15;">
       </div>
-      <div id="cta" class="text OpenSansCondensedBold"
+      <div id="cta" class="text AvenirBlack"
         data-text="ctaText"
-        data-style="padding:0 12px 2px;"
+        data-style="padding:3px 12px 2px;"
         style="top: 542px;
           left: 97px;
           width: 108px;
           height: 34px;
           font-size: 14px;
           line-height: 20px;
-          letter-spacing: 2px;
+          border-radius: 20px;
+          /* letter-spacing: 2px; */
           color: #fff;">
       </div>
       <div id="overlay" style="top:0px;left:0px;width:inherit;height:inherit;background-color:#fff;opacity:1;-webkit-transition:all ease .5s;transition:all ease .5s;"></div>
     </div>
     <div id="loadFont" style="width:0;height:0;overflow:hidden;">
-      <div class="TradeGothicNextLTProCondensed">TradeGothicNextLTProCondensed</div>
-      <!-- <div class="TradeGothicNextLTProBoldCondensed">TradeGothicNextLTProBoldCondensed</div> -->
-      <div class="GillSansNovaBook">GillSansNovaBook</div>
+      <div class="TerminaBlack">TerminaBlack</div>
+      <div class="AvenirBlack">AvenirBlack</div>
     </div>
     <script type="text/javascript">
       var layout = 'standard';
@@ -150,7 +160,7 @@
             // ref: 'ref.png'
             logoImage: './../images/300x600_Vail_Resort_LogoImage.png',
             styleProperties: "na", //{'#cta': {y:10},'#logoImage': {y:10}}
-            ctaBtnColor: '#3968b1^#000000',
+            ctaBtnColor: '#3968B1^#009ADA',
           },
           beforeLoad: function(data){
             data.map(function(content){
@@ -213,7 +223,7 @@
             canvas.width = this.width;
             canvas.height = this.height;
             document.body.appendChild(canvas);
-            ctx.fillStyle = "#3968b1";
+            ctx.fillStyle = "#3968B1";
             ctx.fillRect(0, 0, canvas.width, canvas.height);
             ctx.globalCompositeOperation = 'destination-in';
             ctx.drawImage(this, 0, 0);
